Add more sections
Order of the flaming rose, witch hunters and CoEF

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -61,7 +61,6 @@ footheight=38pt]{scrreport}
 
 \begin{document}
 \makeatletter
-
 \input{abilities.tex}
 \input{realms.tex}
 \input{monsters.tex}
@@ -90,59 +89,6 @@ from depictions of the various creatures, but 1) It would be a lot of effort to 
 ensure I do not encroach on copyright of any sort. Happily, images can be easily found by looking up the creatures' names online.
 \\\\
 This version of the plugin is by no means complete, more content is to be added (hopefully soon).
-
-\iffalse
-	\chapter{Die Welt}
-
-	\section{Geographie}
-	\subsection{Karte des Nordens}
-	\includegraphics[width=1\textwidth,center]{Northernkingdoms}
-	\begin{tiny}\url{https://vignette.wikia.nocookie.net/witcher/images/1/17/Northernkingdoms_full.jpg/revision/latest?cb=20110530105156}\end{tiny}
-	\subsection{Wichtige Regionen}
-	In diesem Abschnitt wird die politische Situation der nördlichen Köngreiche außer Acht gelassen, er befasst sich lediglich mit geographischen Merkmalen.
-	\subsubsection{Die Drachenberge}
-	Die nördliche Grenze der Zivilisation. Niemand hat sie je überquert, zumindest nicht zweimal, um zu berichten, was sich auf der anderen Seite befindet. Die Gründe hierfür sind ihre extreme Abgeschiedenheit und die namensgebende Drachenpopulation.
-
-	\subsubsection{Die Blauen Berge}
-	Heimat der freien Elfen und natürliche Grenze zu Haakland und Zerrikania. Hier findet sich Dol Blathanna, das Tal der Blumen, eines der Wunder der nördlichen Welt. Die uralte Stadt Loc Muinne, erbaut von den mysteriösen Vran, findet sich auf etwa halber Höhe.
-
-	\subsubsection{Der Pontar und das Pontartal}
-	Der Pontar ist einer der größten Flüsse im Norden und trennt das Land von den Blauen Bergen bis zum Meer in einer nahezu horizontalen Linie. Das Tal, dass der Strom sich über die Jahrtausende geschliffen hat, ist das Füllhorn des Nordens: nahezu alle handelbaren Lebensmittel werden hier angebaut, einschließlich den Weinen des Nordens.
-
-	\subsubsection{Die Berge von Mahakam}
-	Die Erzreichen Bergkette zieht sich entlang der Grenze von Temeria und Aedirn. Sie ist die Heimat der Zwerge und Gnome und berühmt für deren hochwertige Schmiedekunst. Die größte Siedlung der Berge liegt unter dem Kohlenberg, wo seine Bewohner das weltbeste Eisen abbauen und die Gnome in ihren Werkstätten erstklassige Waffen wie die Gwyhir schmieden.
-
-	\subsubsection{Die Skellige-Inseln}
-	Eine Ansammlung von sechs Inseln westlich des Kontinents. Die rauhen Klippen und das graue Meer haben eine ungezähmte Schönheit. Jeder Reisende wünscht sich, einmal in seinem Leben die Sonne von einem Skelliger Gipfel ins Meer sinken zu sehen.
-
-	\subsubsection{Brokilon}
-	Von Menschen ``Wald des Todes'' genannt, erstreckt sich die wird die Heimat der Dryaden über das größte Waldgebiet des Nordens. Er bietet all jenen, die von Menschen verfolgt und diskriminiert werden, Zuflucht. Der Wald ist das letzte Reich des Nordens, das nie von Menschen erobert wurde.
-
-	\subsection{Königreiche und Völker}
-	\subsubsection{Redania}
-	Zur Zeit unter der Herrschaft König Radovid des Strengen, profitiert das Land vom Handel mit den anderen Reichen des Nordens. Die wichtigste Quelle von Redanias Wohlstand sind die Getreideexporte in den restlichen Norden. Die Wirtschaft wird allerdings von billigeren Importen aus Nilfgaard gefährdet. Redania steht in einer langen Tradition des Krieges mit Temeria, allerdings haben die beiden Reiche sich unter Radovids Herrschaft einander angenähert.
-	\paragraph{Wichtige Städte}
-	\subparagraph{Novigrad}
-	Obwohl Novigrad geographisch in Redania liegt, unterliegt sie nicht Radovids Herrschaft sondern ist vollständig selbstverwaltet. Die Stadt ist durch Handel zur reichsten Stadt des Nordens geworden, was sie hauptsächlich ihrem Hafen, einem der größten des Kontinents, zu verdanken hat.\\
-	Die Kirche des ewigen Feuers ist in der Freien Stadt so stark wie sonst kaum vertreten, der größte Tempel der Kirche thront auf einer steilen Klippe über der Stadt. Hexenjagden und Feindseligkeit gegenüber Nichtmenschen durchziehen daher die Stadt wie sonst nirgends.\\
-	Offiziell wird die Stadt von einem Stadtrat verwaltet, tatsächlich aber liegt sie in der Hand vier krimineller Organisationen:
-	\begin{itemize}
-		\item Hurensohn Juniors Gruppe, involviert in Glücksspiel, Bordelle und dergleichen
-		\item Sigi Reuvens Gruppe, geführt vom ehemaligen Redanischen Agent Sigismund Dijkstra, hält sich im Schatten. Womit genau sie ihr Geld verdienen, ist unbekannt, allerdings liegt die Vermutung nahe, dass es mit Spionage im Großen und im Kleinen zu tun hat.
-		\item Die Einwohner der geheimen Straße ``fauliger Hain'' unter der Führung von Francis Bedlam, dem ``König der Bettler''. Die meisten Mitglieder Diebe und Bettler.
-		\item Hackers Gruppe, geführt von einem Zwerg, besteht größtenteils aus Zwergen. Sie stellt beinahe eine kleine Armee auf die Beine.
-	\end{itemize}
-	\subparagraph{Oxenfurt}
-	Eine verhältnismäßig kleine Stadt, deren Kern auf einer Insel im Pontar liegt. Berühmt für seine Akademie, die die Naturwissenschaften fördert und den Großteil des Stadtkerns direkt (Campus) oder indirekt (Studentenkneipen\footnote{Wenn jemand ein Problem mit dem grammatikalischen Geschlecht hat, soll er/sie es sich anders denken, an der Oxenfurter Universität studieren auch Frauen, allerdings in der deutlichen Minderheit}) einnimmt. Die Stadt wurde nahezu vollständig auf den Ruinen einer Elfensiedlung erbaut, durch die heute nur noch die Kloake führt.
-	\subparagraph{Tretogor}
-	Die Hauptstadt Redanias, hauptsächlich für ihr jährliches Pferderennen, das ``Große Tretorianische,'' bekannt.
-
-	\subsubsection{Kaedwen}
-	Das größte Königreich des Nordens teilt sich seine Grenzen mit Redania und Aedirn und wird von König Henselt beherrscht. In den letzten Jahrzehnten gab es immer wieder Kriege zwischen Kaedwen und Aedirn, ausgelöst durch den von beiden Seiten erhobenen Anspruch auf das Pontartal. Bis jetzt hält Aedirn diesen Landstrich.
-	\paragraph{Wichtige Städte}
-	\subparagraph{Ban Ard}
-	Die wahrscheinlich wichtigste Stadt Kaedwens. Hier befindet sich die berühmte Magierakademie.
-\fi
 
 \chapter{The world}
 
@@ -177,6 +123,9 @@ the renowned \hyperref[weapon:gwyhir]{Gwyhir}.
 \subsection{The Skellige-Isles}\label{region:skellige}
 A collection of six islands to the continent's west. Their rough cliffs and grey sea have an untamed, perilous beauty.
 No traveller in the north should forgo the sight of the sun sinking into the sea from a summit of a mountain in Skellige.
+\\[1.5ex]
+The wild animals in the isles, particularily \nameref{monster:bear} and \nameref{monster:wolf} tend to be larger and
+stronger than their cousins on the Continent, and their fur is often white.
 
 \subsection{Brokilon}\label{region:brokilon}
 Called by men the ``Forest of Death,'' the home of the Dryads stretches across the north's largest wood. It offers a refuge to
@@ -249,29 +198,56 @@ The Clan's original territory was Undvik, but they are now settled in the southe
 from them and therefore consider them rivals rather than neighbours. Despite this dispute, it is Clan Heymaey who suffers the most under Clan Drummond, whose
 jarls have made a habit of pillaging Hindarsfjall. The Jarls rule from Holmstein and Kaer Muire and consider Modolf their founding father.
 
-\subsection{Clan Heymaey}
+\subsubsection{Clan Heymaey}
 The isle of Hindarsfjall is ruled by Clan Heymaey, whose progenitor is seid to be Otkell. The clan stands out from the others by it's piety: The temple of Freya
 and the holy grave of Hindar are both located on their island. Aside from traditional skirmishes with raiders of Clan Drummond, Clan Heymaey gets along
 very well with the other clans.
 
-\subsection{Clan Tordarroch}
+\subsubsection{Clan Tordarroch}
 The ancestral home of Clan Tordarroch is on Undvik, but they have recently removed from the island to live in their ships: an ice giant has driven them from
 the isle and made it uninhabitable, they claim. Over time, their ships were bridged with more and more planks, until eventually, they were all a single structure:
 The Floating Market.
 
-\subsection{Clan Tuirseach}
+\subsubsection{Clan Tuirseach}
 The descendants of Tyr rule An Skellig, the island best-suited for farming, since it has a wide and enclosed plain where crops are relatively sheltered from the
 sea. This clan has brought fourth more kings than any of the others, and they are greatly strengthened by their alliance with Clan an Craite.
 
-\subsection{The Order of the Flaming Rose}
-
-\subsection{The Witch-hunters}
+\subsection{The Order of the Flaming Rose}\label{group:flaming-rose}
+After the second northern war, a charismatic leader took over the Order of the White Rose, 
+a knightly order reduced by many years of complacency to hoarders of wealth, and reformed
+it into a zealous army serving the Eternal Fire. This was Jacques de Aldesberg. Under his
+grandmastership, the order dedicated itself to the protection of the weak and ridding the
+world of all evil \textendash even going so far as to slay monsters without pay. De Aldesberg's
+ultimate goal was long hidden from the public, however: To wage war on the lodge of sorceresses,
+who had by then become a powerful political entity. It has later come to light that the
+\hyperref[realm:redania]{Redanian} intelligence service aided in the Order's formation precisely
+to achieve this end.
+\\[2ex]
+De Aldesberg's aspirations were abruptly cut short when, after both Radovid V of \nameref{realm:redania}
+and Foltest II of \nameref{realm:temeria} decided he was too dangerous a fanatic to be left in such a
+position of power and asked the witcher Geralt of Rivia to assassinate the grandmaster. The witcher
+was successful and a more moderate knight, Siegfried of Denesle, took up the grandmaster's cloak.
+His ascent into power was followed by several reforms, including the renunciaion of all their assets
+to the \hyperref[realm:temeria]{Temerian crown} and the removal of the Order's headquarters to
+Castle Barienmurg in \nameref{realm:redania}. There, Radovid received them with honour and 
+allowed them great freedom, a grace the Order repays with willing service. The policy on the 
+slaying of monsters has since been revoked, though perhaps some of the older members will still 
+have pity on a poor village elder. 
 
 \section{Religious cults}
 
 \subsection{The cult of Freya}\label{religion:freya}
 
 \subsection{The church of the Eternal Fire}\label{religion:eternal_fire}
+The cult of the Eternal Fire was founded in the legendary past during the human colonization of the North, 
+when settlers came to the abandoned city that preceded \hyperref[city:novigrad]{Novigrad} and found there a
+strange man, guarding a solitary fire and foretelling prosperity to their city as long as it burned. Over the
+centuries, the cult gained a larger and larger following, until it mostly controlled \hyperref[city:novigrad]{Novigrad}
+and, christened the ``Church of the Eternal Fire,'' began to spread throughout the rest of the North.
+\\[2ex]
+The churches leader is an elected Hierarch, and it's body consists of a spiritual arm, the priesthood, and a 
+militant arm, the \hyperref[group:flaming-rose]{Order of the Flaming Rose}. More recently, the church also 
+sanctions the actions of the \hyperref[profession:witch_hunters]{Witch-hunters}.
 
 \section{Customs}
 
@@ -357,6 +333,16 @@ Younger Knights-errant in particular are drawn to acts of foolish grandeur, such
 A Knight-errant should start out with full body armour, a (possibly armoured) horse, a sword as backup and a primary battle weapon such as a lance or
 a bow. Their starting wealth should not exceed the equivalent of five or six commerce points, nor go below the equivalent of three.
 
+\subsection{Witch-hunter}\label{profession:witch_hunters}
+The Witch-hunters are a fanatical and violent group sworn to the eradication of mages in the North.
+Their chief seat is in \hyperref[city:novigrad]{Novigrad}, but they operate all throughout \nameref{realm:redania}.
+The prospect of unchastised violence and plentiful loot attract thugs of all sorts, even so Radovid V and the
+\hyperref[religion:eternal_fire]{Church of the Eternal Fire} support their operations.
+At the start of a campaign, a Witch-hunter will be armed with a sword or an equivalent weapon, as well as perhaps a 
+bow or crossbow and whatever armour they can afford. In accordance with their chief targets, they tend to carry dimeritium
+bombs and -shackles, allowing them to capture even quite gifted mages. Their starting wealth should not go above the equivalent
+of three commerce points.
+
 \section{Witchers}
 Since being a Witcher determines both one's profession and genetic makeup, they will be treated separately from all other types of character. Quite appropriately,
 when you think about it.
@@ -364,7 +350,7 @@ when you think about it.
 Witchers, similarly to non-humans, suffer distrust and harassment in most places, especially cities far removed from the monsters Witchers were
 made to combat. They are generally tolerated, however, much in the way that whalers are: They're nasty, unrefined, and they stink, but their
 jobs have to be done by someone. It is also commonly accepted that the mutations Witchers undergo rob them of any emotions. Their eyes are like
-those of a cat, and by this, they can be told from regular humans, if the two swords did not already give the game away.
+those of a cat, and by this, they can be told apart from regular humans, if the two swords did not already give the game away.
 \\\\
 Witchers gain one additional attribute point to be spent on either STR or REF. Their vocation is \textit{Witcher}%
 \footnote{This vocation can be used to assist in most perception checks, as it includes the Witchers' senses.
@@ -372,7 +358,7 @@ Witchers gain one additional attribute point to be spent on either STR or REF. T
 , and they must put at least two skill points into this vocation, as well as one skill point each into proficiency with longsword
 and \hyperref[rule:signs]{signs}. Witchers needn't make any dice rolls to determine their compatibility with \nameref{rule:witcher_potions}.
 \\\\
-Starting wealth will typically range from 1 to 3. The Witcher will likely be equipped with light or medium armor, a steel and a silver
+Starting wealth will typically range from the equivalent of one to three commerce points. The Witcher will likely be equipped with light or medium armor, a steel and a silver
 longsword and perhaps one or two potions.
 
 \subsection{Witcher schools}
@@ -547,7 +533,7 @@ remember.
 
 \section{\hyperref[realm:temeria]{Temerian} coinage}
 The most well-known \hyperref[realm:temeria]{Temerian} coin is doubtlessly the crown. Making this the \textit{only}
-\hyperref[realm:temeria]{Temerian} coin, however, would be blatantly ignorant of actual systems of currenty as well
+\hyperref[realm:temeria]{Temerian} coin, however, would be blatantly ignorant of actual systems of currency as well
 as simple practicality. Here, then, is the full system:
 
 \begin{itemize}
