Add cult of freya

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -237,6 +237,12 @@ have pity on a poor village elder.
 \section{Religious cults}
 
 \subsection{The cult of Freya}\label{religion:freya}
+The worship of Freya is nearly exclusive to \hyperref[region:skellige]{Skellige}. The goddess is depicted
+in three capacities; Virgin, Mother and Crone, though the motherly aspect is much more prominent than the other two.
+There are two great sanctuaries hallowed by Freya, the Garden and the Temple, both of which can be found on the 
+isle of Hindarsfjall, though smaller altars and statues are dotted all throughout \hyperref[region:skellige]{the isles}.
+Warriors pray to the goddess before setting out to sea, and so do the wives they leave behind, often by placing offerings
+on a local altar. Freya's priesthood is made up entirely of women, as it is forbidden for men to serve her.
 
 \subsection{The church of the Eternal Fire}\label{religion:eternal_fire}
 The cult of the Eternal Fire was founded in the legendary past during the human colonization of the North, 
